--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -2,6 +2,18 @@
 <html>
 <head>
     <title><%= title %></title>
+    <style>
+        .room-container {
+            display: inline-block;
+            padding: 50px;
+            background: #128fc5;
+            margin: 30px;
+            text-align: center;
+            font-size: 50px;
+            color: white;
+            cursor: pointer;
+        }
+    </style>
 </head>
 
 <body>
