--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -13,6 +13,52 @@
             color: white;
             cursor: pointer;
         }
+
+        #quiz-container {
+            width: 800px;
+            height: 800px;
+            background-color: #9aabff;
+            color: white;
+            text-align: center;
+            font-size: 20px;
+            padding: 20px;
+            margin: auto;
+            flex-direction: column;
+        }
+
+        .hide {
+            display: none;
+        }
+
+        .flex {
+            display: flex;
+        }
+
+        .quiz-body {
+            flex-grow: 1;
+        }
+
+        .btn {
+            background-color: #8a86ff;
+            padding: 5px;
+            border-radius: 10px;
+            border-bottom: solid #6f6aff;
+            cursor: pointer;
+        }
+
+        .btn:hover {
+            border-bottom: none;
+        }
+
+        .options {
+            text-align: left;
+            margin-top: 20px;
+            margin-bottom: 20px;
+        }
+
+        #body {
+            margin-top: 40px;
+        }
     </style>
 </head>
 
