Added Room Admin page

--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -3,6 +3,18 @@
 <head>
     <title><%= title %></title>
     <style>
+        input {
+            width: 300px;
+            padding: 10px;
+            margin-left: 10px;
+            margin-right: 10px;
+        }
+
+        button {
+            padding: 10px;
+            cursor: pointer;
+            border: none;
+        }
         .room-container {
             display: inline-block;
             padding: 50px;
