Added quiz rendering section

--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -71,6 +71,11 @@
         #body {
             margin-top: 40px;
         }
+
+        .body-container {
+            display: flex;
+            flex-direction: column;
+        }
     </style>
 </head>
 
