Fixed question rendering issue

--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -72,9 +72,31 @@
             margin-top: 40px;
         }
 
-        .body-container {
+        .section-body-container {
             display: flex;
-            flex-direction: column;
+            flex-direction: row;
+        }
+
+        .question-form-container {
+            background-color: #96b8fa;
+        }
+
+        .section-container {
+            padding: 30px;
+        }
+        .section-body-container {
+
+        }
+
+        .question-container {
+            background-color: palegoldenrod;
+            width: 400px;
+            overflow-x: auto;
+        }
+
+        .question-view-container {
+            font-size: 20px;
+            margin-bottom: 10px;
         }
     </style>
 </head>
