--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -98,6 +98,33 @@
             font-size: 20px;
             margin-bottom: 10px;
         }
+
+        #result-container {
+            width: 800px;
+            height: 800px;
+            background-color: #9aabff;
+            color: white;
+            text-align: center;
+            font-size: 20px;
+            padding: 20px;
+            margin: auto;
+        }
+
+        #wait-container {
+            width: 800px;
+            height: 800px;
+            background-color: #9aabff;
+            color: white;
+            text-align: center;
+            font-size: 20px;
+            padding: 20px;
+            margin: auto;
+        }
+
+        .text-left {
+            text-align: left;
+            display: inline-block;
+        }
     </style>
 </head>
 
