Added misc fixes

--- a/views/admin.ejs
+++ b/views/admin.ejs
@@ -1,14 +1,14 @@
 <%- include('./partials/header') %>
 <div class="body-container">
-  <div>
+  <div class="room-form-container">
       <form  method="post">
-          <div>
-              <span>Room Name</span>
-              <input type="text" name="roomName" placeholder="Room Name">
+          <div class="form-input-group">
+              <span class="form-title">Room Name</span>
+              <input class="form-input" type="text" name="roomName" placeholder="Room Name">
           </div>
-          <div>
-              <span>Room ID</span>
-              <input type="text" name="roomId" placeholder="Room ID">
+          <div class="form-input-group">
+              <span class="form-title">Room ID</span>
+              <input class="form-input"  type="text" name="roomId" placeholder="Room ID">
           </div>
 
           <div>
