--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -15,6 +15,7 @@
             cursor: pointer;
             border: none;
         }
+
         .room-container {
             display: inline-block;
             padding: 50px;
@@ -36,6 +37,12 @@
             padding: 20px;
             margin: auto;
             flex-direction: column;
+        }
+
+        .current-user-window {
+            flex: 1;
+            background-color: #96b8fa;
+            text-align: center;
         }
 
         .hide {
@@ -62,12 +69,6 @@
             border-bottom: none;
         }
 
-        .options {
-            text-align: left;
-            margin-top: 20px;
-            margin-bottom: 20px;
-        }
-
         #body {
             margin-top: 40px;
         }
@@ -79,18 +80,20 @@
 
         .question-form-container {
             background-color: #96b8fa;
+            flex: 1;
         }
 
         .section-container {
             padding: 30px;
         }
+
         .section-body-container {
 
         }
 
         .question-container {
             background-color: palegoldenrod;
-            width: 400px;
+            flex: 1;
             overflow-x: auto;
         }
 
@@ -125,6 +128,33 @@
             text-align: left;
             display: inline-block;
         }
+
+        .quiz-btn-container {
+            padding-top: 30px;
+        }
+
+        .room-form-container {
+            background-color: #92b0f1;
+            padding: 30px;
+            width: 500px;
+            margin: auto;
+        }
+
+        .form-input-group {
+            display: flex;
+            margin-bottom: 15px;
+        }
+
+        .form-input {
+            flex: 3;
+        }
+
+        .form-title {
+            flex: 1;
+            color: white;
+            font-size: 17px;
+        }
+
     </style>
 </head>
 
