--- a/views/home.ejs
+++ b/views/home.ejs
@@ -16,7 +16,9 @@
         </div>
     </div>
     <div id="result-container" class="hide"></div>
-    <div id="wait-container" class="hide"></div>
+    <div id="wait-container" class="hide">
+        Waiting For Admin Instruction
+    </div>
     <script>
         const roomsContainerHtml = document.getElementById('rooms-container');
         const resultContainerHtml = document.getElementById('result-container');
@@ -172,6 +174,11 @@
             resultContainerHtml.innerHTML = '';
             const resultDiv = document.createElement('div');
             resultDiv.classList.add('text-left');
+
+            const resultTitleDiv = document.createElement('div');
+            resultTitleDiv.innerHTML = 'Result';
+            resultDiv.append(resultTitleDiv);
+
             let rank = 0;
             for (const r of result) {
                 rank++;
