Added misc fixes

--- a/views/quizEdit.ejs
+++ b/views/quizEdit.ejs
@@ -7,17 +7,17 @@
             <div>
                 <div class="question-sections form-input-group">
                     <span class="form-title">Question</span>
-                    <input class="form-input" type="text" name="question" class="question" placeholder="Question">
+                    <input type="text" name="question" class="form-input question" placeholder="Question">
                 </div>
 
                 <div class="question-sections form-input-group">
                     <span class="option-title form-title">Option 1</span>
-                    <input class="form-input" type="text" class="options">
+                    <input type="text" class="form-input options">
                 </div>
 
                 <div class="question-sections form-input-group">
                     <span class="option-title form-title">Option 2</span>
-                    <input class="form-input" type="text" class="options">
+                    <input type="text" class="options form-input">
                 </div>
 
                 <div class="additional-option">
@@ -26,7 +26,7 @@
 
                 <div class="answer-sections form-input-group">
                     <span class="title form-title">Answer</span>
-                    <input class="form-input" type="text" class="answer">
+                    <input type="text" class="answer form-input">
                 </div>
 
                 <div class="quiz-btn-container">
